--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
           <div class="intro-home">
           <h2>Portfolio Concept</h2>
             <p>I currently work as a non-profit manager, doing a little bit of everything, including the design and basic build out of web pages and communications. My portfolio will primarily focus on new work, as development is a whole new ballgame.</p>
-            <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
+
+            <button type="button" class="btn btn-default top-btn" data-toggle="tooltip" data-placement="top" title="View my portfolio">More details &raquo;</button>
             </div><!--intro-home-->
         </div><!-- /col -->
 
@@ -116,7 +117,8 @@
           <div class="intro-home">
           <h2>Project Goals</h2>
             <p>Though my expected graduation date is May 19, 2017 - my goal is to finish this course no later than May 1, almost three weeks ahead of schedule. As I work full-time, I plan to commit 20 - 25 hours per week to studying.</p>
-            <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
+
+            <button type="button" class="btn btn-default top-btn" data-toggle="tooltip" data-placement="top" title="More about me">More details &raquo;</button>
             </div> <!--intro-home-->
         </div><!-- /col -->
 
@@ -124,7 +126,8 @@
           <div class="intro-home">
           <h2>Course Goals</h2>
           <p>I am using this course so that I can change careers. Seattle is a huge tech hub, and I want in on the fun! After this course, my goal is to be hired as a junior developer, preferrably front-end. Eventually, I'd like to be able to freelance.</p>
-          <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
+
+          <button type="button" class="btn btn-default top-btn" data-toggle="tooltip" data-placement="top" title="More about me">More details &raquo;</button>
 
           </div><!--intro-home-->
         </div><!-- /col -->
@@ -169,7 +172,7 @@
       <div class="main-text">
         <!--<h3>Still Interested?</h3>-->
 
-        <p>I currently work in field known as association management, which is management for non-profit organizations. As a manager, I approve website designs, email templates, plan events, and more. While I enjoy the work that I do, there was a small, but nagging voice in the back of my head telling me that I didn't just need to approve websites, but that I could create them! I didn't need to make content for emails and newsletters, I could code how they looked. So, I decided to take the leap.<br><br>
+        <p>I currently work in <a href="http://www.zzeem.com/WhatisAssociationManagement.aspx" title="for-profit management of non-profit organizations" id="association" data-placement="top">association management</a>. As a manager, I approve website designs, email templates, plan events, and more. While I enjoy the work that I do, there was a small, but nagging voice in the back of my head telling me that I didn't just need to approve websites, but that I could create them! I didn't need to make content for emails and newsletters, I could code how they looked. So, I decided to take the leap.<br><br>
 
         When not at work, or studying for my new career, I like to stay active! Living in Seattle brings all sorts of perks, including great hiking and biking trails, an easily accesible coast, and great craft ciders. I'm also an avid (and excellent) baker, love old-school hip-hop, and can quote the West Wing from start to finish.</p>
 
@@ -218,7 +221,7 @@
 
     <div class="container-fluid anchor" id="faq">
 
-      <div class="main-faq" data-stellar-background-ratio="2" id="main-faq">
+      <div class="main-faq" id="main-faq">
         <h1>FAQs</h1>
       </div> <!--end main faq-->
 
@@ -227,7 +230,7 @@
         <h2>
           <div class="modal-button">
             <button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">View Resume/CV</button>
-          </div>
+          </div> <!--end modal button-->
           <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content">
@@ -237,13 +240,12 @@
                 </div>
                 <div class="modal-body">
                   <embed id="resume" src="E.ChadwickResume.pdf">
-                </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </h2>
-      </div>
+                </div> <!--end modal body-->
+              </div> <!--end modal content-->
+            </div> <!--end modal-dialog-->
+          </div> <!--end modal fade bs-example-modal-lg-->
+        </h2> <!--end header-->
+      </div> <!--end row-->
 
       <div class="panel-group" id="accordion">
         <div class="panel panel-default">
@@ -438,7 +440,14 @@
     </script>
 
     <script type="text/javascript">
-      $("main-faq").stellar();
+      $(window).stellar();
+    </script>
+
+    <script>
+      $(function () {
+        $('#association').tooltip();
+        $('[data-toggle="tooltip"]').tooltip();
+      });
     </script>
 
     <!-- <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> -->
