--- a/index.html
+++ b/index.html
@@ -380,6 +380,9 @@
                 <textarea style="resize:none;" cols="40" rows="3" class="form-control message-box" placeholder="Drop a line" id="message"></textarea>
                 <button type="submit" class="btn btn-primary submit contact-btn">Submit</button>
               </div> <!--end form-group-->
+
+              <p id ="char-count"></p>
+
             </div> <!--end contact box-->
 
             <p id="visible-comment"></p>
