--- a/index.html
+++ b/index.html
@@ -144,18 +144,18 @@
       <h1>Work</h1>
       <div class="work-row" id="work">
 
-        <div class="col-xs-12 col-s-6 col-md-6 col-lg-6">
+        <!--<div class="col-xs-12 col-s-6 col-md-6 col-lg-6">
           <div class="portfolio-col-grid">
             <img src="img/calculator.jpg" class="portfolio-img img-responsive">
             <br>I created this calculator using HTML and CSS. Divs are used to house the numbers and CSS tools help visually guide the user of this tool. For now, this a non-functioning calculator (though try hovering over the numbers!). As my skills grow, I plan to use JavaScript to turn this into a functioning tool. This project took me approximately 1.5 hours.
-          </div><!--end col-grid-->
-        </div><!--end col-xs-12 etc-->
-        <div class="col-xs-12 col-s-6 col-md-6 col-lg-6">
+          </div>--><!--end col-grid-->
+        <!--</div>--><!--end col-xs-12 etc-->
+        <!--<div class="col-xs-12 col-s-6 col-md-6 col-lg-6">
           <div class="portfolio-col-grid">
             <img src="img/homepage.jpg" class="portfolio-img img-responsive">
             <br>This site was created using primarily HTML, CSS, and Twitter Bootstrap. There are some links to JavaScript into which I will further dive in later lessons. This site took approximately two weeks to build out from start to finish (including time spent learning all of these new skills), but will continue to grow as I do.
-          </div><!--end col-grid-->
-        </div><!--end col-xs-12 etc-->
+          </div>--><!--end col-grid-->
+        <!--</div>--><!--end col-xs-12 etc-->
       </div><!--end row -->
     </div><!--end container-fluid-->
 
@@ -422,6 +422,8 @@
     <!-- Can place script tags with JavaScript files here -->
 
     <script src="js/jquery.stellar.min.js"></script>
+
+    <script src="js/work.js"></script>
 
     <script src="js/scripts.js"></script>
 
