--- a/index.html
+++ b/index.html
@@ -353,7 +353,8 @@
             <h1>Let's Chat</h1>
             <h4>
             <span class="glyphicon glyphicon-envelope"></span> <a href="mailto:emilyann.chadwick@gmail.com">emilyann.chadwick@gmail.com</a><br>
-            <span class="glyphicon glyphicon-phone-alt"></span> (206) 359-5393
+            <span class="glyphicon glyphicon-phone-alt"></span> (206) 359-5393<br><br>
+            <div id="map"></div>
             </h4> <!--end contact icons-->
           </div> <!--end chat-->
 
@@ -426,6 +427,8 @@
     <script src="js/work.js"></script>
 
     <script src="js/scripts.js"></script>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0ljVFOg5lJTGqtasW6wqTGevmSi9jWhI&callback=initMap"></script>
 
   </body>
 </html>
